--- a/less/blocks/scaffolding.less
+++ b/less/blocks/scaffolding.less
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Rajdhani:400,500,700');
+@import url('https://fonts.googleapis.com/css?family=Rubik:400,700');
 
 html,
 body {
@@ -9,9 +9,8 @@ body {
   min-width: 320px;
   margin: 0;
   padding: 0;
-  font-family: 'Rajdhani', 'Arial', sans-serif;
-  font-size: 15px;
-  font-weight: 500;
+  font-family: 'Rubik', 'Arial', sans-serif;
+  font-size: 14px;
   line-height: 22px;
   color: #4f4f4f;
   background-color: #ffffff;
@@ -93,7 +92,7 @@ input,
 optgroup,
 select,
 textarea {
-  font-family: 'Rajdhani', 'Arial', sans-serif;
+  font-family: 'Rubik', 'Arial', sans-serif;
 }
 
 
