--- a/less/blocks/main/mitoshi.less
+++ b/less/blocks/main/mitoshi.less
@@ -31,7 +31,7 @@
 
 .mitoshi__button {
   box-sizing: border-box;
-  width: 190px;
+  min-width: 200px;
   margin-bottom: 15px;
   padding: 10px 15px;
   line-height: 20px;
