--- a/less/blocks/main/how.less
+++ b/less/blocks/main/how.less
@@ -50,6 +50,7 @@
   box-shadow: 0 0 20px #ffffff;
   cursor: pointer;
   transition: all 0.1s;
+  text-align: center;
 
   &:hover {
     box-shadow: 0 0 20px #ffc700;
@@ -116,6 +117,6 @@
     display: block;
     margin-left: auto;
     margin-right: auto;
-    max-width: 290px;
+    max-width: 400px;
   }
 }
