--- a/less/blocks/header/header.less
+++ b/less/blocks/header/header.less
@@ -57,7 +57,6 @@
               0 0 20px #ffc700;
 }
 
-
 .header__toggle {
   display: none;
   width: 36px;
@@ -79,10 +78,20 @@
 
 .header__language {
   order: 3;
+}
 
-  button {
-    width: 50px;
-    padding: 5px;
+.header__language-button {
+  width: 40px;
+  padding: 5px;
+}
+
+a.header__language-link {
+  display: flex;
+  justify-content: space-around;
+  align-items: flex-start;
+
+  img {
+    margin-top: 1px;
   }
 }
 
