--- a/less/blocks/scaffolding.less
+++ b/less/blocks/scaffolding.less
@@ -65,6 +65,8 @@ input[type="radio"].visually-hidden {
 .dropdown-content {
   display: none;
   position: absolute;
+  top: 40px;
+  left: -45px;
   background-color: #f9f9f9;
   min-width: 100px;
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
