--- a/less/blocks/main/sale.less
+++ b/less/blocks/main/sale.less
@@ -46,16 +46,14 @@
   line-height: 18px;
   color: #4f4f4f;
   border: 1px solid #ffc700;
-  background: none;
   border-radius: 100px;
   cursor: pointer;
   transition: box-shadow 0.1s;
+  background: linear-gradient(90deg, #ffc700 5.65%, #ffe13a 95.2%);
+  box-shadow: 0 0 20px #ffffff;
 
   &:hover {
-    background: linear-gradient(91.95deg, #ffc701 0.35%, #ffe13a 99.76%);
     box-shadow: 0 0 20px #ffc700;
-    border: 1px solid transparent;
-    color: #ffffff;
   }
 }
 
