--- a/css/style.css
+++ b/css/style.css
@@ -217,7 +217,6 @@ input[type="radio"].visually-hidden {
 .dropdown-content {
   display: none;
   position: absolute;
-  top: 40px;
   left: -45px;
   background-color: #f9f9f9;
   min-width: 100px;
@@ -561,6 +560,7 @@ a.header__language-link img {
   margin-bottom: 15px;
   padding: 10px 15px;
   line-height: 20px;
+  color: #4f4f4f;
   border-radius: 100px;
   border: none;
   cursor: pointer;
@@ -568,21 +568,18 @@ a.header__language-link img {
 }
 .mitoshi__button--transparent {
   text-align: center;
-  color: #4f4f4f;
-  background: none;
-  border: 1px solid #ffc700;
-  transition: box-shadow 0.1s;
+  background: linear-gradient(90deg, #ffc700 5.65%, #ffe13a 95.2%);
+  box-shadow: 0 0 20px #ffffff;
 }
 .mitoshi__button--transparent:hover {
-  background: linear-gradient(91.95deg, #ffc701 0.35%, #ffe13a 99.76%);
   box-shadow: 0 0 20px #ffc700;
-  border: 1px solid transparent;
-  color: #ffffff;
 }
 .mitoshi__button--gold {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
   text-align: right;
   position: relative;
-  color: #ffffff;
   background: linear-gradient(90deg, #ffc700 5.65%, #ffe13a 95.2%);
   box-shadow: 0 0 20px #ffffff;
 }
@@ -592,19 +589,22 @@ a.header__language-link img {
 .mitoshi__button--right {
   padding-right: 30px;
 }
-.mitoshi__button--gold::before,
-.mitoshi__button--tel::before {
-  content: "";
-  position: absolute;
-  top: 50%;
-  left: 22px;
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
-  width: 24px;
+.mitoshi__button--right p {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+  width: 20px;
   height: 20px;
-  background-image: url(../images/telegram.svg);
-  background-repeat: no-repeat;
-  background-size: contain;
+  border-radius: 50%;
+  overflow: hidden;
+  background-color: #0bf;
+}
+.mitoshi__button--right p i {
+  margin-right: 1px;
+  color: #ffffff;
+  font-size: 12px;
+  line-height: 12px;
 }
 @media (max-height: 1000px) {
   .mitoshi {
@@ -967,16 +967,14 @@ a.header__language-link img {
   line-height: 18px;
   color: #4f4f4f;
   border: 1px solid #ffc700;
-  background: none;
   border-radius: 100px;
   cursor: pointer;
   transition: box-shadow 0.1s;
+  background: linear-gradient(90deg, #ffc700 5.65%, #ffe13a 95.2%);
+  box-shadow: 0 0 20px #ffffff;
 }
 .sale__button:hover {
-  background: linear-gradient(91.95deg, #ffc701 0.35%, #ffe13a 99.76%);
   box-shadow: 0 0 20px #ffc700;
-  border: 1px solid transparent;
-  color: #ffffff;
 }
 .sale__allocation {
   display: flex;
