--- a/less/blocks/footer/footer.less
+++ b/less/blocks/footer/footer.less
@@ -25,65 +25,75 @@
 }
 
 .footer__item a {
-  display: block;
+  //display: block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 45px;
   height: 45px;
   border-radius: 50%;
-  background: linear-gradient(90deg, #FFC700 5.65%, #FFE13A 95.2%);
-  transition: all 0.1s;
+  font-size: 25px;
+  line-height: 25px;
+  color: #ffffff;
+  //background: linear-gradient(90deg, #FFC700 5.65%, #FFE13A 95.2%);
+  transition: all 0.2s;
 
   &:last-child {
     margin-right: 0;
   }
 
   &:hover {
-    box-shadow: 0 0 20px #ffc700;
+    box-shadow: 0 0 20px 5px rgba(0, 0, 0, 0.2);
   }
 }
 
 .footer__item--telegram a {
-  background-image: url(../images/telegram.svg), linear-gradient(90deg, #FFC700 5.65%, #FFE13A 95.2%);
-  background-repeat: no-repeat;
-  background-position: center;
+  background: linear-gradient(120deg, #0088cc, #a9eeff);
+  //background-image: url(../images/telegram.svg), linear-gradient(90deg, #FFC700 5.65%, #FFE13A 95.2%);
+  //background-repeat: no-repeat;
+  //background-position: center;
 }
 
-
-
-
 .footer__item--whatsapp a {
-  background-image: url(../images/whatsapp.svg), linear-gradient(90deg, #FFC700 5.65%, #FFE13A 95.2%);
-  background-repeat: no-repeat;
-  background-position: center;
+  background: linear-gradient(45deg, #E5FFCC, #1EBEA5, #00E676, #D0E9EA);
+  //background-image: url(../images/whatsapp.svg), linear-gradient(90deg, #FFC700 5.65%, #FFE13A 95.2%);
+  //background-repeat: no-repeat;
+  //background-position: center;
 }
 
 .footer__item--mail a {
-  background-image: url(../images/mail.svg), linear-gradient(90deg, #FFC700 5.65%, #FFE13A 95.2%);
-  background-repeat: no-repeat;
-  background-position: center;
+  background: #005ff9;
+  //background-image: url(../images/mail.svg), linear-gradient(90deg, #FFC700 5.65%, #FFE13A 95.2%);
+  //background-repeat: no-repeat;
+  //background-position: center;
 }
 
 .footer__item--facebook a {
-  background-image: url(../images/facebook.svg), linear-gradient(90deg, #FFC700 5.65%, #FFE13A 95.2%);
-  background-repeat: no-repeat;
-  background-position: center;
+  background: #4267b2;
+  //background-image: url(../images/facebook.svg), linear-gradient(90deg, #FFC700 5.65%, #FFE13A 95.2%);
+  //background-repeat: no-repeat;
+  //background-position: center;
 }
 
 .footer__item--lkdin a {
-  background-image: url(../images/lkdin.svg), linear-gradient(90deg, #FFC700 5.65%, #FFE13A 95.2%);
-  background-repeat: no-repeat;
-  background-position: center;
+  background: #0077b5;
+  //background-image: url(../images/lkdin.svg), linear-gradient(90deg, #FFC700 5.65%, #FFE13A 95.2%);
+  //background-repeat: no-repeat;
+  //background-position: center;
 }
 
 .footer__item--twitter a {
-  background-image: url(../images/twitter.svg), linear-gradient(90deg, #FFC700 5.65%, #FFE13A 95.2%);
-  background-repeat: no-repeat;
-  background-position: center;
+  background: #1DA1F2;
+  //background-image: url(../images/twitter.svg), linear-gradient(90deg, #FFC700 5.65%, #FFE13A 95.2%);
+  //background-repeat: no-repeat;
+  //background-position: center;
 }
 
 .footer__item--youtube a {
-  background-image: url(../images/youtube.svg), linear-gradient(90deg, #FFC700 5.65%, #FFE13A 95.2%);
-  background-repeat: no-repeat;
-  background-position: center;
+  background: #e82117;
+  //background-image: url(../images/youtube.svg), linear-gradient(90deg, #FFC700 5.65%, #FFE13A 95.2%);
+  //background-repeat: no-repeat;
+  //background-position: center;
 }
 
 .footer__group {
