--- a/less/blocks/main/mitoshi.less
+++ b/less/blocks/main/mitoshi.less
@@ -79,7 +79,7 @@
   height: 20px;
   border-radius: 50%;
   overflow: hidden;
-  background-color: #0bf;
+  background: linear-gradient(120deg, #0088cc, #a9eeff);
 
   i {
     margin-right: 1px;
