--- a/less/blocks/main/contacts.less
+++ b/less/blocks/main/contacts.less
@@ -40,46 +40,59 @@
 }
 
 .contacts__list-item a {
-  display: block;
+  //display: block;
   width: 45px;
   height: 45px;
   border-radius: 50%;
-  background: linear-gradient(90deg, #FFC700 5.65%, #FFE13A 95.2%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 25px;
+  line-height: 25px;
+  color: #ffffff;
+  //background: linear-gradient(90deg, #FFC700 5.65%, #FFE13A 95.2%);
   transition: all 0.1s;
 
   &:hover {
-    box-shadow: 0 0 20px #ffc700;
+    box-shadow: 0 0 20px 5px rgba(0, 0, 0, 0.2);
   }
 }
 
 .contacts__list-item--medium a {
-  background-image: url(../images/medium.svg), linear-gradient(90deg, #FFC700 5.65%, #FFE13A 95.2%);
-  background-repeat: no-repeat;
-  background-position: center;
+  background-color: #000000;
+  //background-image: url(../images/medium.svg);
+  //background-repeat: no-repeat;
+  //background-position: center;
 }
 
 .contacts__list-item--reddit a {
-  background-image: url(../images/reddit.svg), linear-gradient(90deg, #FFC700 5.65%, #FFE13A 95.2%);
-  background-repeat: no-repeat;
-  background-position: center;
+  background-color: #FF4400;
+  //background-image: url(../images/reddit.svg);
+  //background-repeat: no-repeat;
+  //background-position: center;
 }
 
 .contacts__list-item--github a {
-  background-image: url(../images/github.svg), linear-gradient(90deg, #FFC700 5.65%, #FFE13A 95.2%);
-  background-repeat: no-repeat;
-  background-position: center;
+  background-color: #24292e;
+  //background-image: url(../images/github.svg);
+  //background-repeat: no-repeat;
+  //background-position: center;
 }
 
 .contacts__list-item--bitcoin a {
-  background-image: url(../images/bitcoin.svg), linear-gradient(90deg, #FFC700 5.65%, #FFE13A 95.2%);
+  background-color: #f7931a;
+  background-image: url(../images/bitcoin.svg);
   background-repeat: no-repeat;
   background-position: center;
+  background-size: 24px 28px;
 }
 
-.contacts__list-item--stemit a {
-  background-image: url(../images/steemit.svg), linear-gradient(90deg, #FFC700 5.65%, #FFE13A 95.2%);
+.contacts__list-item--steemit a {
+  background-color: #1fbf8f;
+  background-image: url(../images/steemit.png);
   background-repeat: no-repeat;
   background-position: center;
+  background-size: 24px 22px;
 }
 
 .contacts__button {
