adding images lazy loading

--- a/css/style.css
+++ b/css/style.css
@@ -184,6 +184,15 @@ img {
   max-width: 100%;
   height: auto;
 }
+img,
+source {
+  opacity: 1;
+  transition: opacity 0.2s;
+}
+img[data-src],
+source[data-srcset] {
+  opacity: 0;
+}
 h2 {
   margin: 0;
   margin-bottom: 30px;
