restyling header, nav & buttons

--- a/less/blocks/header/header.less
+++ b/less/blocks/header/header.less
@@ -12,18 +12,18 @@
 }
 
 .header__wrapper {
-  max-width: 1170px;
+  max-width: 1200px;
   margin: 0 auto;
+  padding: 0;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 0 15px;
 }
 
 .header__logo {
   display: flex;
   align-items: center;
-  width: 180px;
+  width: 170px;
   height: 90px;
   margin-right: 10px;
 
@@ -47,7 +47,8 @@
   justify-content: center;
   box-sizing: border-box;
   margin: 0 3px;
-  padding: 7px;
+  padding: 7px 3px;
+  min-width: 90px;
   line-height: 20px;
   color: #4f4f4f;
   background: #ffffff;
@@ -109,7 +110,7 @@ a.header__language-link {
     display: block;
     position: absolute;
     right: 15px;
-    top: 22px;
+    top: 27px;
   }
 
   .header__group {
@@ -141,6 +142,6 @@ a.header__language-link {
   }
 
   .header__language {
-    margin-right: 50px;
+    margin-right: 55px;
   }
 }
