--- a/css/style.css
+++ b/css/style.css
@@ -352,17 +352,17 @@ textarea {
   box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.07);
 }
 .header__wrapper {
-  max-width: 1170px;
+  max-width: 1200px;
   margin: 0 auto;
+  padding: 0;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 0 15px;
 }
 .header__logo {
   display: flex;
   align-items: center;
-  width: 180px;
+  width: 170px;
   height: 90px;
   margin-right: 10px;
 }
@@ -382,7 +382,8 @@ textarea {
   justify-content: center;
   box-sizing: border-box;
   margin: 0 3px;
-  padding: 7px;
+  padding: 7px 3px;
+  min-width: 90px;
   line-height: 20px;
   color: #4f4f4f;
   background: #ffffff;
@@ -434,7 +435,7 @@ a.header__language-link img {
     display: block;
     position: absolute;
     right: 15px;
-    top: 22px;
+    top: 27px;
   }
   .header__group {
     box-sizing: border-box;
@@ -461,11 +462,11 @@ a.header__language-link img {
     align-self: center;
   }
   .header__language {
-    margin-right: 50px;
+    margin-right: 55px;
   }
 }
 .main-nav {
-  margin-right: 20px;
+  margin-right: 10px;
   font-size: 14px;
   line-height: 17px;
 }
@@ -478,7 +479,7 @@ a.header__language-link img {
   text-transform: capitalize;
 }
 .main-nav__item {
-  margin-right: 17px;
+  margin-right: 10px;
   text-align: center;
 }
 .main-nav__item:last-child {
