Continue on capitalization.

--- a/css/style.css
+++ b/css/style.css
@@ -147,6 +147,9 @@ template {
 [hidden] {
   display: none;
 }
+.capitalize {
+  text-transform: capitalize;
+}
 @font-face {
   font-family: 'Rubik';
   font-style: normal;
